unpackaged/main/default/objects/WorkOrderLineItem/fields/A_revoir_en_agence__c.field-meta.xml
<CustomField>
    <fullName>A_revoir_en_agence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A revoir en agence</label>
    <type>Checkbox</type>
</CustomField>