unpackaged/main/default/objects/WorkOrderLineItem/fields/Agence_Intervenante__c.field-meta.xml
<CustomField>
    <fullName>Agence_Intervenante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence Intervenante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Missions (Agence Intervenante)</relationshipLabel>
    <relationshipName>Missions1</relationshipName>
    <type>Lookup</type>
</CustomField>