unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Check_point_PL__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Check_point_PL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check point PL</label>
    <type>Checkbox</type>
</CustomField>