unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Contacteurs_de_porte__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Contacteurs_de_porte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacteurs de porte / marche pieds</label>
    <type>Checkbox</type>
</CustomField>