unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Etat_carrosserie__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Etat_carrosserie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>État général carrosserie</label>
    <type>Checkbox</type>
</CustomField>