unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Etat_pneumatiques__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Etat_pneumatiques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>État pneumatiques</label>
    <type>Checkbox</type>
</CustomField>