unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Etat_porte__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Etat_porte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>État porte coulissante/relevable</label>
    <type>Checkbox</type>
</CustomField>