unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Etat_porte_battante__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Etat_porte_battante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>État porte battante</label>
    <type>Checkbox</type>
</CustomField>