unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Parechocs_AVAR_anticyclistes__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Parechocs_AVAR_anticyclistes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pare-chocs AV/AR et barre anti-cyclistes</label>
    <type>Checkbox</type>
</CustomField>