unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Serrage_des_roues__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Serrage_des_roues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serrage des roues</label>
    <type>Checkbox</type>
</CustomField>