unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Signaltique_reglementaire__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Signaltique_reglementaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signalétique réglementaire</label>
    <type>Checkbox</type>
</CustomField>