unpackaged/main/default/objects/WorkOrderLineItem/fields/Carrosserie_Usure_des_freins__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie_Usure_des_freins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usure des freins</label>
    <type>Checkbox</type>
</CustomField>