unpackaged/main/default/objects/WorkOrderLineItem/fields/Commentaires_ColdLine__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_ColdLine__c</fullName>
    <description>Commentaire visible que par Coldline et PF Admin</description>
    <label>Commentaires ColdLine</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>