unpackaged/main/default/objects/WorkOrderLineItem/fields/Constat__c.field-meta.xml
<CustomField>
    <fullName>Constat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constat</label>
    <type>Checkbox</type>
</CustomField>