unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_Arrivee__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Arrivee__c</fullName>
    <label>Date/Heure Arrivée sur place</label>
    <type>DateTime</type>
</CustomField>