unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_D_appel__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_D_appel__c</fullName>
    <label>Date/Heure d&#39;appel à un technicien</label>
    <type>DateTime</type>
</CustomField>