unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_De_transmission__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_De_transmission__c</fullName>
    <label>Date/Heure De transmission</label>
    <type>DateTime</type>
</CustomField>