unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Fin__c</fullName>
    <label>Date/Heure Fin d&#39;intervention</label>
    <type>DateTime</type>
</CustomField>