unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_Realisation__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Realisation__c</fullName>
    <label>Date/Heure Réalisation</label>
    <type>DateTime</type>
</CustomField>