unpackaged/main/default/objects/WorkOrderLineItem/fields/Date_Heure_Retour__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Retour__c</fullName>
    <label>Date/Heure Retour agence/domicile</label>
    <type>DateTime</type>
</CustomField>