unpackaged/main/default/objects/WorkOrderLineItem/fields/Display_in_Report_Templates__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Report_Templates__c</fullName>
    <formula>NOT(Nom_de_la_Mission__c = &quot;KILOMETRAGE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display in Report Templates</label>
    <type>Checkbox</type>
</CustomField>