unpackaged/main/default/objects/WorkOrderLineItem/fields/DocAdm_ATP_marquage__c.field-meta.xml
<CustomField>
    <fullName>DocAdm_ATP_marquage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATP (Attestation + marquage)</label>
    <type>Checkbox</type>
</CustomField>