unpackaged/main/default/objects/WorkOrderLineItem/fields/DocAdm_Contrat_de_location__c.field-meta.xml
<CustomField>
    <fullName>DocAdm_Contrat_de_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feuille de location</label>
    <type>Checkbox</type>
</CustomField>