unpackaged/main/default/objects/WorkOrderLineItem/fields/DocAdm_Plaque_constructeur__c.field-meta.xml
<CustomField>
    <fullName>DocAdm_Plaque_constructeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaque constructeur</label>
    <type>Checkbox</type>
</CustomField>