unpackaged/main/default/objects/WorkOrderLineItem/fields/DocAdm_Plaques_de_tare__c.field-meta.xml
<CustomField>
    <fullName>DocAdm_Plaques_de_tare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaques de tare</label>
    <type>Checkbox</type>
</CustomField>