unpackaged/main/default/objects/WorkOrderLineItem/fields/Eclairage_Eclairages_caisse_cabine__c.field-meta.xml
<CustomField>
    <fullName>Eclairage_Eclairages_caisse_cabine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eclairages caisse + cabine</label>
    <type>Checkbox</type>
</CustomField>