unpackaged/main/default/objects/WorkOrderLineItem/fields/Eclairage_Eclairages_extrieurs__c.field-meta.xml
<CustomField>
    <fullName>Eclairage_Eclairages_extrieurs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eclairages extérieurs</label>
    <type>Checkbox</type>
</CustomField>