unpackaged/main/default/objects/WorkOrderLineItem/fields/Eclairage_Etat_charge__c.field-meta.xml
<CustomField>
    <fullName>Eclairage_Etat_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etat de charge</label>
    <type>Checkbox</type>
</CustomField>