unpackaged/main/default/objects/WorkOrderLineItem/fields/Eclairage_Niveau_deau__c.field-meta.xml
<CustomField>
    <fullName>Eclairage_Niveau_deau__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveau d’eau</label>
    <type>Checkbox</type>
</CustomField>