unpackaged/main/default/objects/WorkOrderLineItem/fields/Etat_Mission__c.field-meta.xml
<CustomField>
    <fullName>Etat_Mission__c</fullName>
    <formula>IF(Vehicule_immobiliser__c ,  $Label.VAR_WOLI_VehiculeAImmobiliser, 
   IF(A_revoir_en_agence__c, $Label.VAR_WOLI_ARevoirEnAgence,
      IF(OK__c, &quot;OK&quot;,
         IF(Non_concerne__c, $Label.VAR_WOLI_NonConcerne, 
            IF( ISPICKVAL(Status,&quot;Non contrôlé&quot;) ,$Label.VAR_WOLI_NonControler,&quot;&quot;)
         ) 
      ) 
   ) 
)</formula>
    <label>Etat Mission</label>
    <type>Text</type>
</CustomField>