unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Contacts_de_porte_arrt_groupe__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Contacts_de_porte_arrt_groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacts de porte arrêt groupe</label>
    <type>Checkbox</type>
</CustomField>