unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Contrle_coulements__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Contrle_coulements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle écoulements</label>
    <type>Checkbox</type>
</CustomField>