unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Escabeau_Marchepied__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Escabeau_Marchepied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escabeau / Marchepied</label>
    <type>Checkbox</type>
</CustomField>