unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Etat_prise_380220V__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Etat_prise_380220V__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etat prise 380/220V</label>
    <type>Checkbox</type>
</CustomField>