unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Rideau_antidperdition__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Rideau_antidperdition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rideau anti-déperdition</label>
    <type>Checkbox</type>
</CustomField>