unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_vaporateur_tatpropret__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_vaporateur_tatpropret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Évaporateur : état/propreté</label>
    <type>Checkbox</type>
</CustomField>