unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoCel_Ventilation__c.field-meta.xml
<CustomField>
    <fullName>FrigoCel_Ventilation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ventilation</label>
    <type>Checkbox</type>
</CustomField>