unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoGrp_Condenseur_tatpropret__c.field-meta.xml
<CustomField>
    <fullName>FrigoGrp_Condenseur_tatpropret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condenseur (état/propreté)</label>
    <type>Checkbox</type>
</CustomField>