unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoGrp_Courroies_Etattension__c.field-meta.xml
<CustomField>
    <fullName>FrigoGrp_Courroies_Etattension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courroies (Etat/tension)</label>
    <type>Checkbox</type>
</CustomField>