unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoGrp_Essai_route_secteur__c.field-meta.xml
<CustomField>
    <fullName>FrigoGrp_Essai_route_secteur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essai route &amp; secteur</label>
    <type>Checkbox</type>
</CustomField>