unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoGrp_Flexible_tuyauterie__c.field-meta.xml
<CustomField>
    <fullName>FrigoGrp_Flexible_tuyauterie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexible + tuyauterie</label>
    <type>Checkbox</type>
</CustomField>