unpackaged/main/default/objects/WorkOrderLineItem/fields/FrigoGrp_vignette_etancheite__c.field-meta.xml
<CustomField>
    <fullName>FrigoGrp_vignette_etancheite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence de la vignette d&#39;étanchéité</label>
    <type>Checkbox</type>
</CustomField>