unpackaged/main/default/objects/WorkOrderLineItem/fields/FSL__VisitingHours__c.field-meta.xml
<CustomField>
    <fullName>FSL__VisitingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visiting Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>