unpackaged/main/default/objects/WorkOrderLineItem/fields/Hayon_Boitier_commande__c.field-meta.xml
<CustomField>
    <fullName>Hayon_Boitier_commande__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boitier commande</label>
    <type>Checkbox</type>
</CustomField>