unpackaged/main/default/objects/WorkOrderLineItem/fields/Hayon_Graissage__c.field-meta.xml
<CustomField>
    <fullName>Hayon_Graissage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graissage (graisseur/coulisses)</label>
    <type>Checkbox</type>
</CustomField>