unpackaged/main/default/objects/WorkOrderLineItem/fields/Hayon_Niveau_huile__c.field-meta.xml
<CustomField>
    <fullName>Hayon_Niveau_huile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveau huile</label>
    <type>Checkbox</type>
</CustomField>