unpackaged/main/default/objects/WorkOrderLineItem/fields/Hayon_Soudurescharnires__c.field-meta.xml
<CustomField>
    <fullName>Hayon_Soudurescharnires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soudures/charnières/plateau/arrêt rolls</label>
    <type>Checkbox</type>
</CustomField>