unpackaged/main/default/objects/WorkOrderLineItem/fields/HAYON_Vignette_VGP_Abaque__c.field-meta.xml
<CustomField>
    <fullName>HAYON_Vignette_VGP_Abaque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vignette VGP / Abaque</label>
    <type>Checkbox</type>
</CustomField>