unpackaged/main/default/objects/WorkOrderLineItem/fields/Intervenant_externe_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Intervenant_externe_fournisseur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>intervenant Externe</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Fournisseur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions</relationshipName>
    <type>Lookup</type>
</CustomField>