unpackaged/main/default/objects/WorkOrderLineItem/fields/Km_constate__c.field-meta.xml
<CustomField>
    <fullName>Km_constate__c</fullName>
    <label>Km constaté</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>