unpackaged/main/default/objects/WorkOrderLineItem/fields/Mail_Agence_Loca_Parc_Relais__c.field-meta.xml
<CustomField>
    <fullName>Mail_Agence_Loca_Parc_Relais__c</fullName>
    <label>Mail Agence Loca(Parc Relais)</label>
    <type>Email</type>
</CustomField>