unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_Controles_divers__c.field-meta.xml
<CustomField>
    <fullName>Moteur_Controles_divers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôles divers</label>
    <type>Checkbox</type>
</CustomField>