unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_direction__c.field-meta.xml
<CustomField>
    <fullName>Moteur_direction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveaux direction assistée</label>
    <type>Checkbox</type>
</CustomField>