unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_Etat_Courroies__c.field-meta.xml
<CustomField>
    <fullName>Moteur_Etat_Courroies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etat courroies</label>
    <type>Checkbox</type>
</CustomField>