unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_freins_assistance__c.field-meta.xml
<CustomField>
    <fullName>Moteur_freins_assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liquide freins / assistance</label>
    <type>Checkbox</type>
</CustomField>