unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_Niveaux_direction_assistee__c.field-meta.xml
<CustomField>
    <fullName>Moteur_Niveaux_direction_assistee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveaux direction assistée</label>
    <type>Checkbox</type>
</CustomField>