unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_Refroidissement__c.field-meta.xml
<CustomField>
    <fullName>Moteur_Refroidissement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveau liquide refroidissement</label>
    <type>Checkbox</type>
</CustomField>