unpackaged/main/default/objects/WorkOrderLineItem/fields/Moteur_Transmission_Cadran__c.field-meta.xml
<CustomField>
    <fullName>Moteur_Transmission_Cadran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etat transmission / Cardan</label>
    <type>Checkbox</type>
</CustomField>