unpackaged/main/default/objects/WorkOrderLineItem/fields/Nom_de_la_Mission__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_la_Mission__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Nom de la mission (dep)</label>
    <type>Text</type>
</CustomField>