unpackaged/main/default/objects/WorkOrderLineItem/fields/Nom_du_technician__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technician__c</fullName>
    <label>Nom du technician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>