unpackaged/main/default/objects/WorkOrderLineItem/fields/Non_concerne__c.field-meta.xml
<CustomField>
    <fullName>Non_concerne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non concerné</label>
    <type>Checkbox</type>
</CustomField>