unpackaged/main/default/objects/WorkOrderLineItem/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Opération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dépannage</fullName>
                <default>true</default>
                <label>Dépannage</label>
            </value>
            <value>
                <fullName>Convoyage</fullName>
            </value>
            <value>
                <fullName>Achat Pièces</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>