unpackaged/main/default/objects/WorkOrderLineItem/fields/Parc_Relais__c.field-meta.xml
<CustomField>
    <fullName>Parc_Relais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc Relais</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Missions (Parc Relais)</relationshipLabel>
    <relationshipName>Missions_Relais</relationshipName>
    <type>Lookup</type>
</CustomField>