unpackaged/main/default/objects/WorkOrderLineItem/fields/Resultats__c.field-meta.xml
<CustomField>
    <fullName>Resultats__c</fullName>
    <label>Résultats</label>
    <type>TextArea</type>
</CustomField>