unpackaged/main/default/objects/WorkOrderLineItem/fields/TECH_AG__c.field-meta.xml
<CustomField>
    <fullName>TECH_AG__c</fullName>
    <formula>IF
(
 OR(
AND(TEXT($User.AgencePF__c) ==  Agence_Intervenante__r.Name,TEXT($User.AgencePF__c)&lt;&gt; NULL),
AND(Contains( $User.Liste_Agences__c , Agence_Intervenante__r.Name ),NOT(ISBLANK(Agence_Intervenante__c))) 
)
,
 TRUE
,
False
)</formula>
    <label>TECH_AG</label>
    <type>Checkbox</type>
</CustomField>