unpackaged/main/default/objects/WorkOrderLineItem/fields/TECH_Parc_Relais_One__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parc_Relais_One__c</fullName>
    <description>Tech Field Reports</description>
    <formula>if(
NOT(ISBLANK( Parc_Relais__c ))
,
1
,
0
)</formula>
    <label>TECH_Parc_Relais_One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>