unpackaged/main/default/objects/WorkOrderLineItem/fields/TECH_UltimateAccount_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_UltimateAccount_ID__c</fullName>
    <formula>WorkOrder.Account.UltimateAccount__c</formula>
    <label>TECH_UltimateAccount_ID</label>
    <type>Text</type>
</CustomField>