unpackaged/main/default/objects/WorkOrderLineItem/fields/Titre_de_la_mission__c.field-meta.xml
<CustomField>
    <fullName>Titre_de_la_mission__c</fullName>
    <description>Nom de type d&#39;enregistrement</description>
    <formula>CASE(RecordType.Name,
&quot;Arrivée sur place&quot;, $Label.WoliRecordType_Arrivee,				
&quot;CARROSSERIE / PNEUS / FREINS&quot;,  $Label.WoliRecordType_CarrosPneuFrein,
&quot;Départ Intervention&quot;,  $Label.WoliRecordType_Depart,
&quot;DOCUMENTS ADMINISTRATIFS&quot;,  $Label.WoliRecordType_DocAdmin,
&quot;ECLAIRAGE / BATTERIE&quot;,  $Label.WoliRecordType_EclairageBatterie,			
&quot;Fin d&#39;intervention&quot;,  $Label.WoliRecordType_FinIntervention,
&quot;FRIGO / CELLULE&quot;,  $Label.WoliRecordType_FrigoCellule,				
&quot;FRIGO / GROUPE&quot;,  $Label.WoliRecordType_FrigoGroupe,			
&quot;HAYON&quot;,  $Label.WoliRecordType_Hayon, 					
&quot;KILOMETRAGE&quot;, $Label.WoliRecordType_Kilometrage,				
&quot;MOTEUR&quot;,  $Label.WoliRecordType_Moteur,					
&quot;MOTEUR / BOITE / PONT&quot;,  $Label.WoliRecordType_MoteurBoitePont,		
&quot;Retour Agence/Domicile&quot;,  $Label.WoliRecordType_RetourDomicile,		
&quot;Transmission Appel&quot;, $Label.WoliRecordType_TransAppel,
&quot;Début d&#39;intervention&quot; , $Label.WoliRecordType_Debut,	
&quot;Compte rendu&quot;, $Label.WoliRecordType_CR,
&quot;Suivi d&#39;intervention&quot;,$Label.WoliRecordType_Suivi  	,	
&quot;Aucun titre&quot;)</formula>
    <label>Contrôles</label>
    <type>Text</type>
</CustomField>