unpackaged/main/default/objects/WorkOrderLineItem/fields/Travaux__c.field-meta.xml
<CustomField>
    <fullName>Travaux__c</fullName>
    <label>Travaux</label>
    <type>TextArea</type>
</CustomField>