unpackaged/main/default/objects/WorkOrderLineItem/fields/Unique_Flow_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Flow_Identifier__c</fullName>
    <label>Unique_Flow_Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>