unpackaged/main/default/objects/WorkOrderLineItem/fields/Work_Order_Not_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Not_Controlled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Not Controlled</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Non Controlés</relationshipLabel>
    <relationshipName>Work_Order_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>