unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Arrivee_sur_place.recordType-meta.xml
<RecordType>
    <fullName>Arrivee_sur_place</fullName>
    <active>true</active>
    <label>Arrivée sur place</label>
</RecordType>