unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/clairage_batterie.recordType-meta.xml
<RecordType>
    <fullName>clairage_batterie</fullName>
    <active>true</active>
    <label>ECLAIRAGE / BATTERIE</label>
</RecordType>