unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Compte_rendu.recordType-meta.xml
<RecordType>
    <fullName>Compte_rendu</fullName>
    <active>true</active>
    <label>Compte rendu</label>
</RecordType>