unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Debut_intervention.recordType-meta.xml
<RecordType>
    <fullName>Debut_intervention</fullName>
    <active>true</active>
    <label>Début d&#39;intervention</label>
</RecordType>