unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Depart_Intervention.recordType-meta.xml
<RecordType>
    <fullName>Depart_Intervention</fullName>
    <active>true</active>
    <label>Départ Intervention</label>
</RecordType>