unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Documents_administratifs.recordType-meta.xml
<RecordType>
    <fullName>Documents_administratifs</fullName>
    <active>true</active>
    <label>DOCUMENTS ADMINISTRATIFS</label>
</RecordType>