unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Fin_intervention.recordType-meta.xml
<RecordType>
    <fullName>Fin_intervention</fullName>
    <active>true</active>
    <label>Fin d&#39;intervention</label>
</RecordType>