unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Hayon_l_vateur.recordType-meta.xml
<RecordType>
    <fullName>Hayon_l_vateur</fullName>
    <active>true</active>
    <label>HAYON</label>
</RecordType>