unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Kilometrage.recordType-meta.xml
<RecordType>
    <fullName>Kilometrage</fullName>
    <active>true</active>
    <label>KILOMETRAGE</label>
</RecordType>