unpackaged/main/default/objects/WorkOrderLineItem/recordTypes/Moteur.recordType-meta.xml
<RecordType>
    <fullName>Moteur</fullName>
    <active>true</active>
    <label>MOTEUR</label>
</RecordType>